[metadata]
name = mcalf
description = "MCALF: Multi-Component Atmospheric Line Fitting"
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Conor MacBride
author_email = cmacbride01@qub.ac.uk
license = BSD 2-Clause
license_file = LICENSE.rst
url = https://github.com/ConorMacBride/mcalf/
keywords = spectrum, spectra, fitting, absorption, emission, voigt
classifiers =
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: C
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Astronomy
  Topic :: Scientific/Engineering :: Physics
project_urls =
    Documentation = https://mcalf.macbride.me/

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
  astropy>=4.2
  matplotlib>=3.1
  numpy>=1.18
  pathos>=0.2.5
  pyyaml>=5.1
  scikit-learn>=0.22
  scipy>=1.4

[options.extras_require]
tests =
  pytest
  pytest-cov
  pytest-mpl
  tox
docs =
  sphinx
  # see docs/requirements.txt for sphinx-automodapi
  # sphinx-automodapi
  ipykernel
  nbsphinx
  sphinx-rtd-theme
  sphinx-gallery
  pytest
  setuptools_scm

[options.packages.find]
where = src

[tool:pytest]
markers =
    mpl_image_compare
filterwarnings =
    ignore:Spectra should be fully processed before loading into MCALF.
    ignore:Data has no positive values, and therefore cannot be log-scaled.

[coverage:run]
omit =
  */mcalf/tests/*
